[metadata]
name = ParallelLinear-CraigR8806
version = 0.0.12
author = Craig Ramage
author_email = craig@craigramage.com
description = Linear Maths library using pyopencl
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CraigR8806/ParallelLinear
project_urls =
    Bug Tracker = https://github.com/CraigR8806/ParallelLinear/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    numpy == 1.22.2
    platformdirs == 2.5.0
    pyopencl == 2022.1
    pytools == 2022.1

[options.packages.find]
where = src